# ml-academic-performance

./: .gitignore  README.md  data_processing.ipynb  explainability.ipynb  modeling.ipynb  preprocessing.ipynb  processing.ipynb  pyproject.toml
data/: math_processed.csv  portuguese_processed.csv
models/: KNN_scenarioA.joblib  KNN_scenarioB.joblib  LinearRegression_scenarioA.joblib  LinearRegression_scenarioB.joblib  RandomForest_scenarioA.joblib  RandomForest_scenarioB.joblib  data_splits.joblib  results_comparison.csv
